...
        else { return }
        view?.updateAvatar(url)
    }
    
    func didTapLogoutButton() {
        let alert = UIAlertController(
            title: "Пока, пока!",
            message: "Уверены, что хотите выйти?",
            preferredStyle: .alert
        )
        alert.addAction(UIAlertAction(title: "Да", style: .default){ [weak self] _ in
            guard let self else { return }
            self.logout()
        })
        alert.addAction(UIAlertAction(title: "Нет", style: .default, handler: nil))
        view?.presentViewController(viewContriller: alert)
    }
...
