...
                    changeHandler: { [weak self] _, _ in
                        guard let self = self else { return }
                        self.presenter?.didUpdateProgressValue(self.webView.estimatedProgress)
                    })
        
        webView.navigationDelegate = self
        webView.accessibilityIdentifier = "UnsplashWebView"
        presenter?.viewDidLoad()
    }
    
    func load(request: URLRequest) {
        webView.load(request)
    }
...
